[metadata]
description = distributed execution of multiple job configurations
long_description = file: README.rst
version = attr: multijob.__version__
; keywords =
url = http://netzwerksicherheit.fb2.fh-frankfurt.de/
maintainer = Lukas Atkinson
maintainer_email = opensource@lukasatkinson.de
; classifiers = ...
license = Apache-2.0

[options]
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-describe
    pytest-cov

[aliases]
test = pytest

[tool:pytest]
addopts = multijob README.rst ./docs/parallelTutorial.rst --cov=multijob --cov-config .coveragerc --doctest-modules --showlocals --cov-report html --cov-report term
