[metadata]
description = distributed execution of multiple job configurations
long_description = file: README.rst
version = attr: multijob.__version__
; keywords =
url = https://fg-netzwerksicherheit.github.io/multijob/
maintainer = Lukas Atkinson
maintainer_email = opensource@lukasatkinson.de
; classifiers = ...
license = Apache-2.0

[aliases]
test = pytest

[tool:pytest]
addopts = multijob README.rst ./docs-src/parallelTutorial.rst --cov=multijob --cov-config .coveragerc --doctest-modules --showlocals --cov-report html --cov-report term

[build_sphinx]
source_dir = docs-src
